[package]
name = "wgpu_cts_runner"
version = "0.1.0"
authors = ["Luca Casonato <hello@lcas.dev>"]
edition = "2018"
publish = false

[dependencies]
deno_console = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_core = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_timers = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_url = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_web = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_webidl = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_webgpu = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
tokio = { version = "1.10.0", features = ["full"] }
termcolor = "1.1.2"

[build-dependencies]
deno_console = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_core = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_timers = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_url = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_web = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_webidl = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
deno_webgpu = { git = "https://github.com/denoland/deno", rev = "91051047cc82e6074348d17414854efb906019d2" }
tokio = { version = "1.10.0", features = ["full"] }